<resources>
    <string name="app_name">My Application</string>
    <string name="login_and_personalize_your_house">Login and Personalize your house</string>
    <string name="textview">TextView</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="emptyString" />
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="smart_home">Smart Home</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_light_sensor">lightSensor</string>
    <string name="title_activity_vent_test">vent_test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="high_speed">High Speed</string>
    <string name="medium_speed">Medium Speed</string>
    <string name="low_speed">Low Speed</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="room_status_is">Room status is</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="garage">Garage</string>
    <string name="front_door">Front Door</string>
    <string name="off">Off</string>
    <string name="power">Power</string>
    <string name="on">On</string>
    <string name="back_door">Back Door</string>
    <string name="lux_value">Lux value</string>
    <string name="todo">TODO</string>

</resources>
