<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/temperature2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unavailable"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.252" />

    <ImageView
        android:id="@+id/bulb"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo">

    </ImageView>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/power"
        android:textColor="#000000"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="25sp"
        android:textStyle="bold"
        android:thumb="@drawable/sw_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/bulb"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:showText="true"
        app:track="@drawable/sw_track">

    </androidx.appcompat.widget.SwitchCompat>

    <ImageView
        android:id="@+id/bulb1"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bulb"
        app:layout_constraintVertical_bias="0.254"
        android:contentDescription="@string/todo">

    </ImageView>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/power"
        android:textColor="#000000"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="25sp"
        android:textStyle="bold"
        android:thumb="@drawable/sw_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/switchButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bulb1"
        app:layout_constraintTop_toBottomOf="@+id/switchButton"
        app:layout_constraintVertical_bias="0.36"
        app:showText="true"
        app:track="@drawable/sw_track">

    </androidx.appcompat.widget.SwitchCompat>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/front_door"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/bulb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_door"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/bulb1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bulb"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="123dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lux_value"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bulb1"
        app:layout_constraintVertical_bias="0.366" />


</androidx.constraintlayout.widget.ConstraintLayout>