<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:background="@drawable/vent_background_1">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="155dp"
            android:layout_height="140dp"
            android:layout_marginBottom="476dp"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
            app:srcCompat="@drawable/vent_fan"
            android:contentDescription="@string/todo" />

        <ImageView
        android:id="@+id/imageView4"
        android:layout_width="124dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment"
        app:srcCompat="@drawable/vent_air"
            android:contentDescription="@string/todo" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/high_speed"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#6eaeea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="141dp"
        android:layout_height="66dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/vent_air"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="155dp"
        android:layout_height="140dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4"
        app:srcCompat="@drawable/vent_fan"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="61dp"
        android:layout_height="51dp"
        android:layout_marginBottom="520dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:srcCompat="@drawable/vent_air"
        android:contentDescription="@string/todo" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="@string/medium_speed"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#6eaeea"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="@+id/radioButton4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton4" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="91dp"
        android:layout_height="59dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/vent_air"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="105dp"
        android:layout_height="61dp"
        android:layout_marginBottom="308dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:srcCompat="@drawable/vent_air"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="155dp"
        android:layout_height="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton5"
        app:srcCompat="@drawable/vent_fan"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="90dp"
        android:layout_height="65dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:srcCompat="@drawable/vent_air"
        android:contentDescription="@string/todo" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/low_speed"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#6eaeea"

        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="@+id/radioButton5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton5" />

</androidx.constraintlayout.widget.ConstraintLayout>